# obsidibot

./: .gitignore  README.md  pyproject.toml
obsidibot/: __main__.py
obsidibot/domain/services/: data_loader.py  llm_provider.py
obsidibot/infrastructure/repositories/: collection_repository.py
obsidibot/infrastructure/services/: data_loader.py  llm_provider.py
